--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <link rel="manifest" href="./manifest.json">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Brew">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
 <body>
   <app-root></app-root>
